syntax = "proto3";

package order;
option go_package = "github.com/yehezkiel1086/go-docs/go-grpc-order-inventory/protobuf/order";

service OrderService {
  rpc CreateOrder(CreateOrderReq) returns(CreateOrderRes);
}

message CreateOrderReq {
  int64 product_id = 1;
  int32 quantity = 2;
}

message CreateOrderRes {
  string status = 1;
}
